    source files of earlier Fortran version.

  - Fix storing signatures of files retrieved from CacheDir() so they're
    correctly identified as up-to-date next invocation.

  - Make sure lists of computed source suffixes cached by Builder objects
    don't persist across changes to the list of source Builders (so the
    addition of suffixes like .ui by the qt.py Tool module take effect).

  From Ben Leslie:

  - Fix post-Memoizer value caching misspellings in Node.FS._doLookup().

  From Rob Managan, Dmitry Mikhin and Joel B. Mohler:

  - Handle TeX/LaTeX files in subdirectories by changing directory
    before invoking TeX/LaTeX.

  - Scan LaTeX files for \bibliography lines.

  - Support multiple file names in a "\bibliography{file1,file2}" string.

  - Handle TeX warnings about undefined citations.

  - Support re-running LaTeX if necessary due to a Table of Contents.

  From Dmitry Mikhin:

  - Return LaTeX if "Rerun to get citations correct" shows up on the next
    line after the "Warning:" string.

  From Gary Oberbrunner:

  - Add #include lines to fix portability issues in two tests.

  - Eliminate some unnecessary os.path.normpath() calls.

  - Add a $CFLAGS variable for C-specific options, leaving $CCFLAGS
    for options common to C and C++.

  From Tom Parker:

  - Have the error message print the missing file that Qt can't find.

  From John Pye:

  - Fix env.MergeFlags() appending to construction variable value of None.

  From Steve Robbins:

  - Fix the "sconsign" script when the .sconsign.dblite file is explicitly
    specified on the command line (and not intuited from the old way of
    calling it with just ".sconsign").

  From Jose Pablo Ezequiel "Pupeno" Fernandez Silva:

  - Give the 'lex' tool knowledge of the additional target files produced
    by the flex "--header-file=" and "--tables-file=" options.

  - Give the 'yacc' tool knowledge of the additional target files produced